--- a/panier.html
+++ b/panier.html
@@ -23,10 +23,10 @@
                 <div id="navbarContent" class="collapse navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html">Accueil</a>
+                            <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="panier.html">Panier</a>
+                            <a class="nav-link active" href="panier.html">Panier</a>
                         </li>
                     </ul>
                 </div>    
@@ -37,12 +37,12 @@
             <div class="row mb-4">
                 <div class="col">
                     <div class="jumbotron">
-                        <h1>Oribear : Un grand choix d'ours en peluche fabriqués à la main</h1>
+                        <h1>Panier</h1>
                     </div>
                 </div>
             </div>
     
-            <div class="row" id="affichage">
+            <div class="row">
                 <!--Contenu généré par JavaScript-->
             </div>
         </div>
@@ -76,6 +76,6 @@
         <!-- first Popper.js, then Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-        <script src="./JavaScript/index.js"></script>
+        <script src="./JavaScript/panier.js"></script>
     </body>
 </html>
