--- a/panier.html
+++ b/panier.html
@@ -43,7 +43,33 @@
             </div>
     
             <div class="row">
-                <!--Contenu généré par JavaScript-->
+                <div class="col-12 col-lg-6">
+                    <h2>Contenu du panier :</h2>
+                    <hr>
+                    <div id="contenuPanier">
+                        <!--Contenu généré par JavaScript-->
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-primary" id="videPanier">Vider le panier</button><br><br>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <h2>Formulaire de Contact :</h2>
+                    <hr>
+                    <form>
+                        <div class="form-group">
+                            <table>
+                                <tr><td><label for="firstName">Prénom* :</label></td><td><input type="text" class="form-control" placeholder="Jean" pattern="[A-Z][A-Za-z' -éèàëêùä]+" title="Une majuscule puis majuscule ou minuscule avec espace, tiret ou apostrophe." id="firstName" name="firstName" required></td></tr>
+                                <tr><td><label for="lastName">Nom* : </label></td><td><input type="text" class="form-control" placeholder="Durand" pattern="[A-Z][A-Za-z' -éèàëêùä]+" title="Une majuscule puis majuscule ou minuscule avec espace, tiret ou apostrophe." id="lastName" name="lastName" required></td></tr>
+                                <tr><td><label for="address">Adresse* : </label></td><td><input type="text" class="form-control" placeholder="2 place du marché" id="address" pattern="[^?!:;%$£&#\/@*-+]" name="address" required></td></tr>
+                                <tr><td><label for="city">Ville* : </label></td><td><input type="text" id="city" class="form-control" placeholder="Lille" pattern="[A-Z][A-Za-z' -éèàëêùä]+" title="Une majuscule puis majuscule ou minuscule avec espace, tiret ou apostrophe." name="city" required></td></tr>
+                                <tr><td><label for="email">Email* : </label></td><td><input type="email" class="form-control" placeholder="jean.durand@lille.fr" id="email" name="email" required></td></tr>
+                            </table>
+                            <p><i>* : Tous les champs sont obligatoires pour passer commande</i></p>
+                            <button type="submit" class="btn btn-primary">Passer commande</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     
