regex ok page réponse ok Projet terminé ?

--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/style.css" />
         <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">-->
-        <title>Oribear - Merci pour votre commande</title>
+        <title>Merci pour votre commande</title>
         <meta description="Grâce à Oribear, trouvez facilement et au meilleur prix votre ours en peluche fabriqué à la main.">
     </head>
 
@@ -38,7 +38,7 @@
             <div class="row mb-4">
                 <div class="col">
                     <div class="jumbotron">
-                        <h1>Détail de votre commande : </h1>
+                        <h1 id="h1"></h1>
                     </div>
                 </div>
             </div>
