--- a/detail.html
+++ b/detail.html
@@ -55,18 +55,18 @@
                     <div class="col-12 col-md-6">
                         <p class="text-center">Mieux nous connaître :</p>
                         <ul class="text-center">
-                            <li><a href="#">Société Orinoco</a></li>
-                            <li><a href="#">Nous contacter</a></li>
-                            <li><a href="#">Postuler</a></li>
+                            <li><a href="index.html">Société Orinoco</a></li>
+                            <li><a href="index.html">Nous contacter</a></li>
+                            <li><a href="index.html">Postuler</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-md-6">
                         <p class="text-center">Autres sites du groupe :</p>
                         <ul class="text-center">
-                            <li><a href="#">Oribook</a></li>
-                            <li><a href="#">Oritextil</a></li>
-                            <li><a href="#">Oricam</a></li>
-                            <li><a href="#">Orimeuble</a></li>
+                            <li><a href="index.html">Oribook</a></li>
+                            <li><a href="index.html">Oritextil</a></li>
+                            <li><a href="index.html">Oricam</a></li>
+                            <li><a href="index.html">Orimeuble</a></li>
                         </ul>
                     </div>
                 </div>
