dernières retouches d'affichage

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
             <div class="row mb-4">
                 <div class="col">
                     <div class="jumbotron">
-                        <h1 id="h1"></h1>
+                        <h1 id="h1resume"></h1>
                     </div>
                 </div>
             </div>
