--- a/detail.html
+++ b/detail.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">-->
         <title>Détail de l'ours en peluche</title>
-        <meta description="Grâce à Oribear, trouvez facilement et au meilleur prix votre ours en peluche fabriqué à la main.">
+        <meta name="description" content="Grâce à Oribear, trouvez facilement et au meilleur prix votre ours en peluche fabriqué à la main.">
     </head>
 
     <body>
