--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">-->
         <title>Oribear - Ours en peluche</title>
-        <meta description="Grâce à Oribear, trouvez facilement et au meilleur prix votre ours en peluche fabriqué à la main.">
+        <meta name="description" content="Grâce à Oribear, trouvez facilement et au meilleur prix votre ours en peluche fabriqué à la main.">
     </head>
 
     <body>
@@ -51,7 +51,7 @@
                         <!--Contenu généré par JavaScript-->
                     </div>
                     <div>
-                        <a href="index.html"><button type="submit" class="btn btn-primary" id="poursuivreAchat">Poursuivre mes achats</button></a>
+                        <button type="submit" class="btn btn-primary" id="poursuivreAchat">Poursuivre mes achats</button>
                         <button type="submit" class="btn btn-primary" id="videPanier">Vider le panier</button><br><br>
                     </div>
                 </div>
